--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,8 @@ src-tauri/gen/schemas/
 node_modules/
 .yarn/
 .pnp.*
-
+yarn.lock
+push.bat
 # Logs
 logs
 *.log
@@ -34,6 +35,7 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+package-lock.json
 
 # Environment variables
 .env
