--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,9 +23,11 @@ tauri-plugin-opener = "2"
 tauri-plugin-autostart = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-reqwest = { version = "0.11", features = ["blocking"] }
-zip = "0.6"
-sevenz-rust = "0.5"
+reqwest = { version = "0.11", features = ["json", "stream"] }
+futures-util = "0.3"
 tokio = { version = "1.0", features = ["full"] }
 dirs = "5.0"
+regex = "1.10.2"
+zip = "0.6"
+sevenz-rust = "0.5"
 
