--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "tailwindcss": "^3.4.1",
     "postcss": "^8.4.35",
     "autoprefixer": "^10.4.17",
-    "nuxt": "^3.10.3"
+    "nuxt": "^3.10.3",
+    "@headlessui/vue": "^1.7.19"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
